--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I'm fine (Я в порядке) — Анонимная самопомощь для мужчин</title>
-    <meta name="description" content="Telegram-приложение для мужчин 25-45 лет. Справляйся со стрессом, тревогой и выгоранием анонимно. Без регистрации, на основе научных методов." />
-    <meta name="author" content="I'm fine Team" />
+    <title>Menhousen — Anonymous self-help for men</title>
+    <meta name="description" content="Telegram app for men 25-45. Deal with stress, anxiety and burnout anonymously. No registration required, based on scientific methods." />
+    <meta name="author" content="Menhousen Team" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kreon:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="I'm fine (Я в порядке) — Ты не обязан справляться один" />
-    <meta property="og:description" content="Анонимный цифровой инструмент самопомощи для мужчин. 60-секундные карточки на базе КПТ в Telegram." />
+    <meta property="og:title" content="Menhousen — You don't have to cope alone" />
+    <meta property="og:description" content="Anonymous digital self-help tool for men. 60-second CBT-based cards in Telegram." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@imfine_app" />
+    <meta name="twitter:site" content="@menhousen_app" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
