--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <meta name="description" content="Telegram app for men 25-45. Deal with stress, anxiety and burnout anonymously. No registration required, based on scientific methods." />
     <meta name="author" content="Menhousen Team" />
 
+    <!-- Favicons and Icons -->
+    <link rel="icon" href="/favicon.ico" sizes="32x32" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="icon" href="/favicon-96x96.png" sizes="96x96" type="image/png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    
+    <!-- PWA Icons -->
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kreon:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
