--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <meta property="og:title" content="Menhousen — You don't have to cope alone" />
     <meta property="og:description" content="Anonymous digital self-help tool for men. 60-second CBT-based cards in Telegram." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://menhausen.com/menhausen_app_oj_image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@menhousen_app" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://menhausen.com/menhausen_app_oj_image.png" />
   </head>
 
   <body>
