--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +6,10 @@
     <title>Menhousen — Anonymous self-help for men</title>
     <meta name="description" content="Telegram app for men 25-45. Deal with stress, anxiety and burnout anonymously. No registration required, based on scientific methods." />
     <meta name="author" content="Menhousen Team" />
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-W5PLT46B');</script>
+    <!-- End Google Tag Manager -->
 
     <!-- Favicons and Icons -->
     <link rel="icon" href="/favicon.ico" sizes="32x32" />
@@ -34,6 +37,10 @@
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W5PLT46B" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    <!-- End Google Tag Manager (noscript) -->
+    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
